--- a/css/normalize.css
+++ b/css/normalize.css
@@ -183,3 +183,10 @@ template {
 [hidden] {
   display: none;
 }
+
+p {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
