--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  max-width: 1140px;
+  max-width: 1110px;
   width: 100%;
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
@@ -8,6 +8,13 @@ body {
 ul {
   margin: 0px;
   padding: 0px;
+}
+
+p {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 a {
@@ -25,6 +32,7 @@ h1 {
   text-transform: uppercase;
   letter-spacing: -0.6px;
   padding-top: 38px;
+  padding-bottom: 105px;
 }
 
 li {
@@ -46,23 +54,27 @@ h2 {
   font-weight: 700;
   line-height: 32px;
   letter-spacing: -0.96px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .main_menu li {
-  padding-top: 43px;
+  padding-top: 48px;
+  letter-spacing: -0.31px;
 }
 
 .main_menu li:not(:first-child) {
-  padding-right: 35px;
+  padding-right: 29px;
 }
 
 .nav_menu {
   float: right;
   color: #0f0101;
   font-size: 14px;
-  font-weight: 700;
+  font-weight: 800;
   line-height: 11px;
   text-transform: uppercase;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .clearfix::after {
@@ -79,11 +91,11 @@ h2 {
 .nav_menu:hover {
   color: #1abc9c;
 }
-/* shop section */
+
 h2::after {
   display: block;
   height: 7px;
-  background-color: #4ec6ab;
+  background-color: rgb(78, 198, 171);
   width: 164px;
   content: '';
   margin: 0 auto;
@@ -91,29 +103,50 @@ h2::after {
   margin-top: 32px;
 }
 
+.shop {
+  padding-bottom: 105px;
+}
+
 .shop_item {
   float: left;
   width: 255px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: linear-gradient(
+    to right,
+    rgb(0, 0, 0) 0px,
+    rgb(0, 0, 0) 201px,
+    rgb(0, 0, 0, 0.44) 201px,
+    rgb(0, 0, 0, 0.44) 255px
+  );
 }
 
-.cost_panel:hover {
-  background-color: #1abc9c;
+h3 {
+  margin: 0px;
+  padding: 0px;
+}
+.shop_item:hover {
+  background: linear-gradient(
+    to right,
+    rgb(78, 198, 171) 0px,
+    rgb(78, 198, 171) 201px,
+    rgb(78, 198, 171, 0.44) 201px,
+    rgb(78, 198, 171, 0.44) 255px
+  );
 }
 
 .features {
   background-color: #e9f0fd;
-  float: left;
 }
 
-.shop li:not(:nth-last-child(1)) {
-  margin-right: 30px;
-  margin-bottom: 30px;
+.shop li:nth-child(4n) {
+  margin-right: 0px;
 }
 
 span {
   float: right;
   color: #ffffff;
-  padding: 12px 12px 11px 12px;
+  padding: 5px 12px 4px 12px;
   font-size: 18px;
   font-weight: 700;
 }
@@ -124,28 +157,23 @@ span {
 }
 
 .item a {
-  padding: 14px 13px 13px 13px;
+  padding: 5px 13px 5px 13px;
   font-size: 18px;
   font-weight: 700;
+  text-transform: uppercase;
+  font-size: 18px;
+  line-height: 32px;
 }
 
 .cost_panel {
   float: left;
   width: 255px;
-  background: linear-gradient(
-    to right,
-    rgb(0, 0, 0) 0px,
-    rgb(0, 0, 0) 201px,
-    rgb(0, 0, 0, 0.44) 201px,
-    rgb(0, 0, 0, 0.44) 255px
-  );
 }
 
 .cost_panel a {
   color: #ffffff;
 }
 
-/* news section */
 h4 {
   color: #555252;
   font-size: 18px;
@@ -153,10 +181,26 @@ h4 {
   letter-spacing: -0.36px;
 }
 
+h4::after {
+  display: block;
+  content: '';
+  width: 136px;
+  background-color: #4ec6ab;
+  height: 3px;
+  margin: 0 auto;
+  margin-left: 1px;
+  margin-top: 11px;
+}
+
 .news {
   float: left;
   max-width: 350px;
   width: 100%;
+
+  padding-bottom: 82px;
+}
+
+.news_list li:not(:nth-last-child(1)) {
   margin-right: 30px;
 }
 
@@ -171,25 +215,10 @@ h4 {
 }
 
 .button {
+  display: inline-block;
   padding: 17px 39px 20px 47px;
   background-color: #4ec6ab;
   text-decoration: none;
   color: #ffffff;
+  border-radius: 5px;
 }
-
-/* .block {
-  width: 300px;
-  height: 200px;
-  background: url(https://static.independent.co.uk/s3fs-public/thumbnails/image/2016/06/15/14/pp-hot-coffee-rf-istock.jpg)
-    no-repeat 0 / cover;
-}
-.block:after {
-  content: '';
-  display: block;
-  height: 100%;
-  background-color: rgba(142, 96, 15, 0.5);
-  transition: background-color 0.3s linear;
-}
-.block:hover:after {
-  background-color: rgba(142, 96, 15, 0);
-} */
